@@ -1,6 +1,7 @@
 Changes for v2.01
 - Fix NullPointerException when editing DeviceCombiner protocol (Graham)
 - Implement upgrade overflow into learned signal and advanced code regions (Graham)
+- When loading a KM file with a protocol named "Manual Settings", append the PID to the name to prevent mis-identification if there is a similar subsequent load (Graham)
 
 Changes for v2.00
 - Fix very minor issue with Fav/Scan, an overlooked difference between Macros and Fav/Scan. (Graham)
